--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "recharts": "^2.15.4",
     "sharp": "^0.34.4",
     "sonner": "^1.7.4",
+    "source-map": "^0.7.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
@@ -75,6 +76,7 @@
     "eslint-config-next": "^15.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vercel": "^48.2.4"
   }
 }
