--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "postinstall": "npx prisma generate",
     "seed": "tsx scripts/seed-database.ts",
+    "populate": "tsx scripts/populate-database.ts",
     "db:push": "npx prisma db push",
     "db:studio": "npx prisma studio"
   },
@@ -79,6 +80,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.0",
+    "eslint-plugin-react-refresh": "^0.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.6",
