--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "clsx": "^2.1.1",
     "jose": "^6.1.0",
     "lucide-react": "^0.462.0",
-    "next": "^15.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "14.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "source-map": "^0.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
